k8s/backend-service-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-external
  namespace: missing-table
  labels:
    app: backend
    type: external
spec:
  ports:
  - port: 8000
    targetPort: 8000
    name: http
  selector:
    app: backend
  type: LoadBalancer
